# kafka

./: README.md  consumer.py  producer.py
services/web/: pyproject.toml
services/web/src/: __init__.py  producer.py
